--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-minimal
-title: Giuseppe Persiano's Home Page
+title: Giuseppe Persiano
 description: Home page for my research and teaching
+
+pages_list:
+Technical Talks: '/Technical'
+NonTechnical Talks: '/nonTechnical'
