--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: Giuseppe Persiano
 description: Home page for my research and teaching
-logo: [varsavia.jpg]
+logo: varsavia.jpg
 
