--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme: jekyll-theme-minimal
 title: Giuseppe Persiano
-description: Home page for my research and teaching <a href=www.repubblica.it>aaa</a>
+description: Home page for my research and teaching
+
+<a href=http://www.repubblica.it>aaa</a>
 logo: ./varsavia.jpg
 
