--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: Giuseppe Persiano
-description: Home page for my research and teaching
+description: Home page for my research and teaching<p>My Google scholar <a href=https://scholar.google.it/citations?user=wbQQcfQAAAAJ>entry</a>
 logo: ./varsavia.jpg
 
